# Online-Judge

./: BUILD.bazel  Makefile  WORKSPACE  deps.bzl  go.mod  go.sum
app/iam/: BUILD.bazel  MakeFile  Makefile
app/iam/cmd/migrate/: BUILD.bazel  main.go
app/iam/cmd/server/: BUILD.bazel  main.go
app/iam/config/: BUILD.bazel  config.go  database.go  jaeger.go  redis.go
app/iam/migrations/: 20240418231511_init_project.down.sql  20240418231511_init_project.up.sql
app/iam/model/: BUILD.bazel  user.go  user_password.go
app/iam/pkg/errors/: BUILD.bazel  interceptor.go
app/iam/pkg/grpclib/: BUILD.bazel  interceptors.go
app/iam/pkg/logger/: BUILD.bazel
app/iam/pkg/migration/: BUILD.bazel  migration.go
app/iam/pkg/otellib/: BUILD.bazel  otellib.go
app/iam/pkg/utils/: cryptography.go
app/iam/repo/: BUILD.bazel  user_password_repo.go  user_repo.go
app/iam/service/: cryptography.go  server.go  service.go  type.go
app/iam/service/common/: BUILD.bazel  error.go
app/iam/service/iam/: BUILD.bazel  cryptography.go  error.go  jwt.go  server.go  service.go  type.go  validator.go
proto/proto/iam/v1/: common.pb.go  iam.pb.go  iam.pb.gw.go  iam_grpc.pb.go
proto/rpc/iam/v1/: BUILD.bazel  common.pb.go  common.pb.validate.go  iam.pb.go  iam.pb.gw.go  iam.pb.validate.go  iam_grpc.pb.go
proto_definition/proto/iam/v1/: BUILD.bazel  common.proto  iam.proto
