load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = [
        "config.go",
        "database.go",
        "jaeger.go",
        "log.go",
        "redis.go",
    ],
    importpath = "github.com/Nanhtu187/Online-Judge/app/iam/config",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_redis_go_redis_v9//:go-redis",
        "@com_github_spf13_viper//:viper",
        "@io_gorm_driver_mysql//:mysql",
        "@io_gorm_gorm//:gorm",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)

alias(
    name = "go_default_library",
    actual = ":config",
    visibility = ["//visibility:public"],
)
