load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "model",
    srcs = [
        "user.go",
        "user_password.go",
    ],
    importpath = "github.com/Nanhtu187/Online-Judge/app/iam/model",
    visibility = ["//visibility:public"],
    deps = ["@io_gorm_gorm//:gorm"],
)

alias(
    name = "go_default_library",
    actual = ":model",
    visibility = ["//visibility:public"],
)
