load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/Nanhtu187/Online-Judge/app/iam/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//app/iam/config",
        "//app/iam/pkg/errors",
        "//app/iam/pkg/grpclib",
        "//app/iam/pkg/logger",
        "//app/iam/pkg/otellib",
        "//app/iam/service/iam",
        "//proto/rpc/iam/v1:iam",
        "@com_github_grpc_ecosystem_go_grpc_middleware//logging/zap",
        "@com_github_grpc_ecosystem_go_grpc_middleware//recovery",
        "@com_github_grpc_ecosystem_go_grpc_middleware//tags",
        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go-grpc-prometheus",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_spf13_cobra//:cobra",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//propagation",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
