load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "logger",
    srcs = ["logger.go"],
    importpath = "github.com/Nanhtu187/Online-Judge/app/iam/pkg/logger",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_grpc_ecosystem_go_grpc_middleware//tags",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_grpc//:go_default_library",
        "@org_uber_go_zap//:zap",
    ],
)
