load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "otellib",
    srcs = ["otellib.go"],
    importpath = "github.com/Nanhtu187/Online-Judge/app/iam/pkg/otellib",
    visibility = ["//visibility:public"],
    deps = [
        "//app/iam/config",
        "@io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc//:otelgrpc",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel//semconv/v1.4.0:v1_4_0",
        "@io_opentelemetry_go_otel_exporters_jaeger//:jaeger",
        "@io_opentelemetry_go_otel_sdk//resource",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
