load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "iam",
    srcs = [
        "common.pb.go",
        "common.pb.validate.go",
        "iam.pb.go",
        "iam.pb.gw.go",
        "iam.pb.validate.go",
        "iam_grpc.pb.go",
    ],
    importpath = "github.com/Nanhtu187/Online-Judge/proto/rpc/iam/v1",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_envoyproxy_protoc_gen_validate//validate",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//utilities",
        "@org_golang_google_genproto_googleapis_api//annotations",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//grpclog",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)

alias(
    name = "go_default_library",
    actual = ":iam",
    visibility = ["//visibility:public"],
)
